Run linux tests in gdb to get a backtrace on segfault.

--- a/.github/workflows/test-linux.yml
+++ b/.github/workflows/test-linux.yml
@@ -36,7 +36,7 @@ jobs:
         
     - name: Test
       run: |
-        pytest -s
+        gdb -return-child-result -batch -ex "run" -ex "bt" --args pytest -s
 
     - name: Codecov
       uses: codecov/codecov-action@v1.2.1
