--- a/.github/workflows/test-linux.yml
+++ b/.github/workflows/test-linux.yml
@@ -24,6 +24,10 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
         
+    - name: Install gdb
+        sudo apt-get update
+        sudo apt-get install gdb
+        
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
