--- a/.github/workflows/test-linux.yml
+++ b/.github/workflows/test-linux.yml
@@ -25,6 +25,7 @@ jobs:
         python-version: ${{ matrix.python-version }}
         
     - name: Install gdb
+      run: |
         sudo apt-get update
         sudo apt-get install gdb
         
