Github test runners use powershell, not batch.

--- a/.github/workflows/test-windows.yml
+++ b/.github/workflows/test-windows.yml
@@ -39,4 +39,4 @@ jobs:
         # the github runners for the windows workflow seem to run oom, so we'll
         # split each invocation of pytest between the files
         dir /b/s test_*.py > testfiles
-        for /F "tokens=*" %A in (testfiles) do python -m pytest -p no:cacheprovider -s %A
+        foreach ($test in get-content "testfiles") {python -m pytest -p no:cacheprovider -s $test}
