--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.10)
 
 project(WooshTests)
 
-add_executable(test_fifobuffer test_fifobuffer.c)
+add_executable(test_fifobuffer ../src/fifobuffer.c test_fifobuffer.c)
 add_executable(test_lifobuffer test_lifobuffer.c)
 
 target_include_directories(test_fifobuffer PUBLIC
