--- a/.github/workflows/test-windows.yml
+++ b/.github/workflows/test-windows.yml
@@ -18,6 +18,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - uses: ilammy/msvc-dev-cmd@v1
     
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
