--- a/.github/workflows/test-linux.yml
+++ b/.github/workflows/test-linux.yml
@@ -39,8 +39,8 @@ jobs:
       run: |
         python setup.py build_ext --gcov --no-optimization -UNDEBUG install
         cd test/c
-        chmod a+x build-gcc.sh
-        ./build-gcc.sh
+        chmod a+x build-cc.sh
+        ./build-cc.sh
         cd ../..
         
     - name: Python Tests
