--- a/.github/workflows/test-linux.yml
+++ b/.github/workflows/test-linux.yml
@@ -34,7 +34,8 @@ jobs:
       run: |
         python setup.py build_ext --gcov --no-optimization -UNDEBUG install
         cd test/c
-        bash build-cc.sh
+        ./build-cc.sh
+
         
     - name: Python Tests
       run: |
@@ -43,7 +44,7 @@ jobs:
     - name: C Tests
       run: |
         cd test/c
-        bash test.sh
+        ./test.sh
 
     - name: Codecov
       uses: codecov/codecov-action@v1.2.1
