Use pgo module for building pgo extensions rather than shell scripts.

--- a/.github/workflows/test-linux.yml
+++ b/.github/workflows/test-linux.yml
@@ -32,7 +32,7 @@ jobs:
         
     - name: Build
       run: |
-        python setup.py build_ext --gcov --no-optimization -UNDEBUG install
+        python setup.py build_ext --gcov --no-optimization --pgo-disable -UNDEBUG install
         cd test/c
         chmod a+x build-cc.sh
         ./build-cc.sh
