--- a/.github/workflows/test-linux.yml
+++ b/.github/workflows/test-linux.yml
@@ -28,6 +28,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install --upgrade setuptools
+        python -m pip install pgo
         python -m pip install pytest
         
     - name: Build
