--- a/.github/workflows/test-windows.yml
+++ b/.github/workflows/test-windows.yml
@@ -29,6 +29,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install --upgrade setuptools
+        python -m pip install pgo
         python -m pip install pytest
         
     - name: Build
