--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,4 +1,4 @@
 
 [build-system]
-requires = ["setuptools >= 40.6.0", "wheel", "pgo == 0.1.1"]
+requires = ["setuptools >= 40.6.0", "wheel", "pgo >= 0.2.2"]
 build-backend = "setuptools.build_meta"
