--- a/.github/workflows/test-unix.yml
+++ b/.github/workflows/test-unix.yml
@@ -1,5 +1,5 @@
 
-name: test-linux
+name: test-unix
 
 on:
   push:
@@ -9,11 +9,13 @@ on:
 
 jobs:
   build:
+  
+    runs-on: ${{ matrix.os }}
 
-    runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
+        os: [ubuntu-latest, macos-latest]
         python-version: [3.6, 3.7, 3.8, 3.9]
 
     steps:
